feat(sdk): Java 8 兼容性改造，支持 JDK 8-26
pom.xml: source/target/release=8，版本号 1.0.0，groupId=io.github.cindifind

新增 Kv 工具类替代 Java 9+ 的 Map.of/List.of；替换所有 var 关键字为显式类型声明；移除 CompletableFuture.orTimeout (Java 9+) 调用；替换 InputStream.readAllBytes/Files.readString 为兼容实现；更新 README 依赖说明